# trajectories

./: .gitignore  CMakeLists.txt  Example.cpp  LICENSE  Path.cpp  README.md  Trajectory.cpp  Trajectory.h  package.xml  pyproject.toml  setup.py
examples/: smooth_example.py
scripts/: trajectory_pub.py
src/: Test.cpp  plotTrajectory.m  service.cpp  test_traj_client.py
src/cpp/: Trajectory.cpp  Trajectory.h  trajectory_smoothing.cpp
src/trajectory_smoothing/: __init__.py  trajectory.py
srv/: GetSmoothTraj.srv
